[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mcclient-lib"
version = "0.8.13"
authors = [
  {name="Sch8ill", email="noreply@noreply.com"},
]
description = "A lightweight Minecraft client to query the status of a Minecraft server"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "dnspython < 2.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
"Bug Tracker" = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mcclient"