[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcclient-lib"
version = "0.8.14"
authors = [
  {name="Sch8ill", email="noreply@noreply.com"},
]
description = "A lightweight Minecraft client for querying the status data of a Minecraft server."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "dnspython<2.4.0,>=2.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Sch8ill/MCClient-lib"
"Bug Tracker" = "https://github.com/Sch8ill/MCClient-lib/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mcclient"